--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,10 +12,16 @@
     "baseUrl": "./",
     "incremental": true,
     "skipLibCheck": true,
-    "strictNullChecks": false,
-    "noImplicitAny": false,
+    "strictNullChecks": true,
+    "noImplicitAny": true,
     "strictBindCallApply": false,
-    "forceConsistentCasingInFileNames": false,
-    "noFallthroughCasesInSwitch": false
+    "forceConsistentCasingInFileNames": true,
+    "noFallthroughCasesInSwitch": true,
+    "paths": {
+      "@root": ["."],
+      "@/*": ["src/*"],
+      "@prismaClient/*": ["prisma/*"],
+      "@users/*": ["src/users/*"]
+    }
   }
 }
